# CudaReduction

./: .bazelrc  .clang-format  .gitattributes  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: BUILD.bazel  example.cu  rules.bzl
docs/: Reduction.excalidraw
include/: BUILD.bazel  nvToolsExt.h
profiles/: reduce0.nsys-rep  reduce0.sqlite  reduce1.nsys-rep  reduce1.sqlite  reduce2.nsys-rep  reduce2.sqlite  reduce3.nsys-rep  reduce3.sqlite  reduce4.nsys-rep  reduce4.sqlite  reduce5.nsys-rep  reduce5.sqlite  reduce6.nsys-rep  reduce6.sqlite  reduce7.nsys-rep  reduce7.sqlite  test.nsys-rep  test.sqlite
profiles/benchmarks/: example_binary.nsys-rep  example_binary.qdstrm  example_binary.sqlite
profiles/config/: reduce.ncu-cfg
profiles/src/: reduce7.ncu-rep
src/: BUILD.bazel  reduce0.cu.cc  reduce1.cu.cc  reduce2.cu.cc  reduce3.cu.cc  reduce4.cu.cc  reduce5.cu.cc  reduce6.cu.cc  reduce7.cu.cc  reduce8.cu  rules.bzl  test.cu.cc
tools/com_google_benchmark/: BUILD.bazel  workspace.bzl
tools/compile_command_extractor/: BUILD.bazel  workspace.bzl
tools/cupti_profiler/: workspace.bzl
tools/nvbench/: nvbench.bzl  workspace.bzl
