load("@rules_cuda//cuda:defs.bzl", "cuda_library")

cuda_library(
    name = "example",
    srcs = ["example.cu"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nvbench//:nvbench_include",
        "@com_github_nvbench//:nvbench_main",
        "@local_cuda//:cuda",
        "@rules_cuda//cuda:runtime",
        "//include:nv_tool_ext_header"
    ],
    alwayslink = 1,
)

cc_binary(
    name = "example_binary",
    srcs = ["@com_github_nvbench//:nvbench_shared"],
    visibility = ["//visibility:public"],
    deps = [
        ":example",
    ],
)
