load("//src:rules.bzl", "cuda_binary")

cuda_binary(
    name = "reduce0",
    srcs = ["reduce0.cu.cc"],
    deps = [
        "//include:nv_tool_ext_header",
        "@local_cuda//:cuda",
    ],
)

cuda_binary(
    name = "reduce1",
    srcs = ["reduce1.cu.cc"],
    deps = [
        "//include:nv_tool_ext_header",
        "@local_cuda//:cuda",
    ],
)

cuda_binary(
    name = "reduce2",
    srcs = ["reduce2.cu.cc"],
    deps = [
        "//include:nv_tool_ext_header",
        "@local_cuda//:cuda",
    ],
)

cuda_binary(
    name = "reduce3",
    srcs = ["reduce3.cu.cc"],
    deps = [
        "//include:nv_tool_ext_header",
        "@local_cuda//:cuda",
    ],
)

cuda_binary(
    name = "reduce4",
    srcs = ["reduce4.cu.cc"],
    deps = [
        "//include:nv_tool_ext_header",
        "@local_cuda//:cuda",
    ],
)

cuda_binary(
    name = "reduce5",
    srcs = ["reduce5.cu.cc"],
    deps = [
        "//include:nv_tool_ext_header",
        "@local_cuda//:cuda",
    ],
)

cuda_binary(
    name = "reduce6",
    srcs = ["reduce6.cu.cc"],
    deps = [
        "//include:nv_tool_ext_header",
        "@local_cuda//:cuda",
    ],
)

cuda_binary(
    name = "reduce7",
    srcs = ["reduce7.cu.cc"],
    ptxasopts = [
        "-dlcm=ca",
        "-v",
    ],
    deps = [
        "//include:nv_tool_ext_header",
        "@local_cuda//:cuda",
    ],
)